@@ -3,12 +3,9 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
-- $r->current_callback should use perl_request_config instead of
-  $Apache::__CurrentCallback 
+- $r->current_callback broken for PerlHandler
 
 - enable PerlRestartHandler w/ EVERYTHING=1
-
-- auto-call Apache::SIG->set again?
 
 - solaris Perl Configure adds a space before -R in ccdlflags, see
   about removing that
@@ -18,16 +15,11 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
   e.g. libmodperl.so 
   [Eugene B. Byrganov <E.B.Byrganov@inp.nsk.su]
 
-- if $USE_APXS then install mod_perl headers files in `apxs -q INCLUDEDIR`
-
 - should $r->content unset $r->headers_in('content-length') ?
 
 - perl_reload_inc problem [Nathan Sidwell <nathan@acm.org>]
 
 - update url to Randy Kobes' win32 binary
-
-- 'make test' AllowOverride None for / 
-  ["Lembark, Steve" <Steve.Lembark@wfg.com>]
 
 - fix t/httpd symlink logic ["Young, Geoffrey S." <younggs@acwilm.com>]
 
